20200529_buybtn photo file

--- a/index.html
+++ b/index.html
@@ -684,27 +684,27 @@
                 </section> -->
             </div>
             <div class="buybtn">
-                <img src="images/resetve.png" alt="">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000" >
+                <img src="images/buybtn/reserve.png" alt="">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-75 mx-auto" src="images/black.png" alt="Second slide">
+                            <img class="d-block w-75 mx-auto" src="images/buybtn/black.png" alt="Second slide">
                             <p class="lefttext">只剩<span class="number number_black">20</span>件</p>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-75 mx-auto" src="images/pink.png" alt="First slide">
+                            <img class="d-block w-75 mx-auto" src="images/buybtn/pink.png" alt="First slide">
                             <p class="lefttext">只剩<span class="number number_pink">20</span>件</p>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-75 mx-auto" src="images/purple.png" alt="Third slide">
+                            <img class="d-block w-75 mx-auto" src="images/buybtn/purple.png" alt="Third slide">
                             <p class="lefttext">只剩<span class="number number_purple">20</span>件</p>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-80 mx-auto" src="images/lightblue.png" alt="Third slide">
+                            <img class="d-block w-80 mx-auto" src="images/buybtn/lightblue.png" alt="Third slide">
                             <p class="lefttext">只剩<span class="number number_lightblue">20</span>件</p>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-75 mx-auto" src="images/blue.png" alt="Second slide">
+                            <img class="d-block w-75 mx-auto" src="images/buybtn/blue.png" alt="Second slide">
                             <p class="lefttext">只剩<span class="number number_blue">20</span>件</p>
                         </div>
                     </div>
@@ -716,7 +716,7 @@
                     </a>
                 </div>
                 <a href="#buy">
-                    <img class="buynow" src="images/buynow.png" alt="">
+                    <img class="buynow" src="images/buybtn/buynow.png" alt="">
                 </a>
                 <!-- 驗證Timer -->
                 <form name="form1" method="post" action="">
